test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/test/spec/block.wast:306: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:310: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:314: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:318: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:323: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:329: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i64]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:335: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f32]
  000001f: error: OnEndExpr callback failed
out/test/spec/block.wast:341: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f64]
  0000023: error: OnEndExpr callback failed
out/test/spec/block.wast:348: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:354: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:360: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:366: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:373: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:379: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:385: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:391: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:398: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:404: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:410: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:416: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:422: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:428: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:434: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:440: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:446: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:452: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:458: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:464: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:471: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:477: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:483: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:489: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:495: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:501: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:507: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:513: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:519: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:525: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:531: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:537: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:544: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:550: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:556: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:562: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:569: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:575: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:581: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:587: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:594: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:600: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:606: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:612: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:619: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:625: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:631: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:637: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:643: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:649: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:655: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:661: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:667: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:673: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:679: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:685: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:692: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:698: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:704: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:710: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:717: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:723: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:729: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:735: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:741: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:747: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:753: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:759: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:765: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:771: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:777: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:783: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:790: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:796: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i64]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:802: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f32]
  0000027: error: EndFunctionBody callback failed
out/test/spec/block.wast:808: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64]
  000002b: error: EndFunctionBody callback failed
out/test/spec/block.wast:815: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:821: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:827: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:833: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:840: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:846: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:852: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:858: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:865: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:873: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:881: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:889: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:897: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:905: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:913: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:921: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:929: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:937: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:945: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:953: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:962: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:968: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:974: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:980: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:987: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:993: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:999: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1005: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1012: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1018: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1024: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1030: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1036: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1042: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1048: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1054: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1060: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1066: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1072: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1078: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1085: assert_malformed passed:
  out/test/spec/block/block.125.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/block.wast:1089: assert_malformed passed:
  out/test/spec/block/block.126.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
167/167 tests passed.
;;; STDOUT ;;)
